After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 727855 - camerabin: does not send an error if linking vfsrc pad to viewfinder queue fails
camerabin: does not send an error if linking vfsrc pad to viewfinder queue fails
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.2.3
Other Linux
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-04-08 18:25 UTC by Mohammed Sameer
Modified: 2014-04-09 06:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed fix (1.22 KB, patch)
2014-04-08 18:25 UTC, Mohammed Sameer
committed Details | Review

Description Mohammed Sameer 2014-04-08 18:25:20 UTC
Created attachment 273827 [details] [review]
proposed fix

As the summary says. Attaching a proposed fix.
Comment 1 Sebastian Dröge (slomo) 2014-04-09 06:54:45 UTC
commit b2613744627f88d2d0de1d5b24cb9b1bb416aad7
Author: Mohammed Sameer <msameer@foolab.org>
Date:   Tue Apr 8 20:54:26 2014 +0300

    camerabin: report an error if we fail to link vfsrc and viewfinder queue
    
    https://bugzilla.gnome.org/show_bug.cgi?id=727855