camerabin: report an error if we fail to link vfsrc and viewfinder queue

https://bugzilla.gnome.org/show_bug.cgi?id=727855